--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,20 @@ attrs==22.2.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.3.2
+colorama==0.4.6
 exceptiongroup==1.1.0
+flake8==7.0.0
 h11==0.14.0
 idna==3.4
+loguru==0.7.2
+mccabe==0.7.0
+mypy==1.8.0
+mypy-extensions==1.0.0
 outcome==1.2.0
 packaging==23.2
+pycodestyle==2.11.1
 pycparser==2.21
+pyflakes==3.2.0
 PySocks==1.7.1
 python-dotenv==0.21.1
 requests==2.31.0
@@ -17,6 +25,8 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 trio==0.22.0
 trio-websocket==0.9.2
+typing_extensions==4.9.0
 urllib3==1.26.14
 webdriver-manager==4.0.1
+win32-setctime==1.1.0
 wsproto==1.2.0
